Changelog
=========


1.0.2 (unreleased)
------------------

- Nothing changed yet.


1.0.1 (2011-11-29)
------------------

- Updated sprite icon and css: Activate dossier icon for the two new bdbds special dossiers.
  [phgross]


1.0 (2011-11-17)
----------------

- Updated sprite icon and css: Activate dossier icon for the two new bdbds special dossiers.
  [phgross]

- Added special css handling for the task icon in listings
  Issue #1184 Abgeschnittene Icons
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1184
  [phgross]

- Removed 'enable_border' hack, because it's not longer necessary,
  the viewlet is now correctly overwritten in opengever.base.
  Issue #1178 OG-Spezifische Anpassungen in main_template
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1178/
  [phgross]


1.0a24 (2011-11-14)
-------------------

- Include mo-files in git repository and in dist.
  [jone, eschmutz]


1.0a23 (2011-11-09)
-------------------

- Nothing changed yet.


1.0a22 (2011-11-09)
-------------------

- Add Styling for the dynamic batchbox.
  Issue #1262 Listenfoermige Ausdrucke
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1262/
  [phgross]

- Issue #17 Suchtext fuer Suchportlet muss einfacher angepasst werden koennen
  https://extranet.4teamwork.ch/projects/verein-plonegov/tracker-verein-plonegov.ch/17
  Added viewlet to get a searchstring from the registry
  [eschmutz]

- changed old tasktamplatefolder icon of a tasktemplate with new icon of a task
  Issue #1268 Falsches Icon bei Aufgabe unter Standardablauf
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1268/

- Added styling for tabbedview state filters
  Issue #1070  Abgeschlossene Aufgaben nicht immer einblenden
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1070
  [phgross]

- Issue #1665 Besitzer wechseln: Fehler beim Suchen von Benutzern