@@ -5,7 +5,8 @@ Changelog
 1.0.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix error of searchbox viewlet when accessing manage-viewlets in zug.ch
+  [eschmutz]
 
 
 1.0.1 (2011-11-29)
